@@ -2,6 +2,7 @@
  - Move code for imagemap() to Image::Keyboard::ImageMap::Tags.
  - Move code for check 'files_dir' parameter to image() method.
  - Rewrite Changes file to CPAN::Changes::SPEC format.
+ - Update Module::Install to 1.12 version.
 
 0.03 2013-08-27
  - Add LICENSE.
